fix: bottom navbar z-index

--- a/src/components/Sst/BottomNavbar/BottomNavbar.module.scss
+++ b/src/components/Sst/BottomNavbar/BottomNavbar.module.scss
@@ -18,7 +18,7 @@ $inactive-grey-color: #515151;
     bottom: 0;
     left: 0;
     background: $white-color;
-    z-index: 4;
+    z-index: 100;
     border-radius: $border-radius-large $border-radius-large 0 0;
     box-shadow: 0rem 0rem 0.4rem 0rem $bottom-navbar-shadow-color;
   }
